styling fix for staff registration invite button in profile

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1548,7 +1548,8 @@ div.search {
   max-width: 100%;
   padding: 1em 0;
 }
-#btnPasswordResetEmail{
+#btnPasswordResetEmail,
+#registrationEmailContainer #btnProfileSendEmail {
   font-size: @smallBtnSize;
   height: 2.9em;
   padding: 0 1em;
