truenth login as button fix

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -954,6 +954,7 @@ div.pull-right {
   }
 
   span.link {
+    font-size: @mediumText;
     margin-left: 0.3em;
     background: @featureBtnBgColor;
     border: solid @featureBtnBgColor 1px;
