initial queries fixes (e.g. pre-selected clinic)

--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -18,7 +18,7 @@
                <div class="terms-checkbox-container">
                <!-- note these checkboxes are selectively hidden using css, as some are applicable only in Truenth and some only applicable in Eproms-->
                 <label class="custom-tou tnth-hide" data-agree="false" data-type="terms" data-tou-type="subject website consent" data-core-data-type="subject_website_consent" data-url="{{terms['url'] if terms}}">
-                  <i class="fa fa-square-o fa-lg terms-tick-box" class="edit-view"></i> <span class="edit-view"><span class="terms-tick-box-text">{{ _("I have read the information notice above and consent and agree to the processing of my personal information (including my health information) on the terms described in this Consent and Terms and Conditions.") }}</span></span>
+                  <i class="fa fa-square-o fa-lg terms-tick-box edit-view"></i> <span class="edit-view"><span class="terms-tick-box-text">{{ _("I have read the information notice above and consent and agree to the processing of my personal information (including my health information) on the terms described in this Consent and Terms and Conditions.") }}</span></span>
                   <div class="display-view text-warning tnth-hide">{{_("You have previously provided your consent to the website during a visit at your treating site. If you would like a copy of this please contact your study contact.")}}<br/></div>
                 </label>
                 <br/>
