--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -406,7 +406,7 @@ FieldsChecker.prototype.getNext = function() {
     if (!found && !self.sectionCompleted(section)) {
        if (section == "orgsContainer") {
           if (hasValue(preselectClinic)) {
-              var __modal = OT.getConsentModal();
+              var __modal = OT.getConsentModal(preselectClinic);
               if (__modal) {
                 __modal.modal("show");
               };
@@ -497,14 +497,19 @@ function initIncompleteFields() {
     };
 
 };
+
 $(document).ready(function(){
 	/*
 	 * the flow here : 
 	 * get still needed core data
 	 * populate terms if it is agreed
-	 * get incomplete fields thereafter
+	 * get incomplete fields thereafter 
+   * note: need to delay gathering incomplete fields to allow fields to be render (e.g. broken in firefox if no delay)
 	 */
-	configObj.initConfig(function() { tnthAjax.getTerms({{user.id}}, false, false, initIncompleteFields); });
+	configObj.initConfig(function() { tnthAjax.getTerms({{user.id}}, false, false, function() {
+    setTimeout(initIncompleteFields, 500);
+    })
+  });
 
   tnthAjax.getDemo({{user.id}});
 
