indent code in initial queries, fix memory leak and add delay between saving of consent and demographics information

--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -500,21 +500,26 @@ function initIncompleteFields() {
 };
 
 $(document).ready(function(){
-	/*
-	 * the flow here : 
-	 * get still needed core data
-	 * populate terms if it is agreed
-	 * get incomplete fields thereafter 
-   * note: need to delay gathering incomplete fields to allow fields to be render 
-   * (e.g. broken in firefox if no delay)
-	 */
-	configObj.initConfig(function() { tnthAjax.getTerms({{user.id}}, false, false, function() {
-    var to = (navigator.userAgent.toLowerCase().indexOf('firefox') > -1) ? 1000: 500;  
-    setTimeout(initIncompleteFields, to);
-    })
-  });
+  	/*
+  	 * the flow here : 
+  	 * get still needed core data
+  	 * populate terms if it is agreed
+  	 * get incomplete fields thereafter 
+     * note: need to delay gathering incomplete fields to allow fields to be render 
+     * (e.g. broken in firefox if no delay)
+  	 */
+  	configObj.initConfig(function() { tnthAjax.getTerms({{user.id}}, false, false, function() {
+      var isFF = navigator.userAgent.toLowerCase().indexOf('firefox') > -1;
+      var to = (isFF) ? 1000: 500;  
+      if (isFF) {
+        DELAY_LOADING = true;
+        setTimeout(function() { $("#loadingIndicator").fadeOut(); DELAY_LOADING = false;}, 1500);
+      }
+      setTimeout(initIncompleteFields, to);
+      })
+    });
 
-  tnthAjax.getDemo({{user.id}});
+    tnthAjax.getDemo({{user.id}});
 
     var namesChangeEvent = function() {
        if (fc.allFieldsCompleted()) fc.continueToFinish();
