initial queries styling fixes

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -119,9 +119,7 @@ legend {
   font-size: @baseFontSize;
 }
 .tnth-headline,
-.tnth-subhead {
-  font-size: @subheadSize;
-}
+.tnth-subhead,
 h3, h4, h5 {
   font-size: @subSmallHeadSize;
 }
