--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -164,14 +164,14 @@
   {%- endmacro %}
   {% macro nameGroup() -%}
     <div class="row" id="nameGroup">
-        <div class="col-md-5 col-xs-8">
+        <div class="col-md-5 col-sm-6 col-xs-10">
           <div class="form-group float-input-label">
             <label>Name</label>
             <input class="form-control float-text init-queries-field" id="firstname" name="firstname" aria-label="{{_('First name')}}" placeholder="{{ _('First Name') }}" type="text" required="required" data-error="{{ _('First name is required') }}"  />
             <div class="help-block with-errors"></div>
           </div>
         </div>
-        <div class="col-md-5 col-xs-8">
+        <div class="col-md-5 col-sm-6 col-xs-10">
           <div class="form-group float-input-label">
             <label>&nbsp;</label>
             <input class="form-control float-text init-queries-field" id="lastname" name="lastname" aria-label="{{_('Last name')}}" placeholder="{{ _('Last Name') }}" type="text" required="required" data-error="{{ _('Last name is required') }}" />
@@ -216,10 +216,10 @@
           <div class="form-group">
             <label>{{ _("Birth Date") }} <span class="bd-optional text-muted">{{_("(optional)")}}</span></label>
             <div class="row">
-              <div class="col-md-4 col-xs-8">
+              <div class="col-md-4 col-sm-6 col-xs-10">
                 <input class="form-control bd-element init-queries-field" id="date" name="birthdayDate" aria-label="{{_('Birth date')}}" placeholder="DD" type="text" maxlength="2" pattern="\d[\d]?" data-error="{{_('The birth day field is required and must be valid format')}}"  data-trigger-event="change" required />
               </div>
-              <div class="col-md-4 col-xs-8">
+              <div class="col-md-4 col-sm-6 col-xs-10">
                 <select data-type="select" class="form-control bd-element init-queries-field" name="birthdayMonth" aria-label="{{_('Birth month')}}" id="month" data-error="{{_('A birth month must be selected')}}" data-trigger-event="change" required>
                   <option value="">{{ _("Month") }}...</option>
                   <option value="01">{{ _("January") }}</option>
@@ -236,7 +236,7 @@
                   <option value="12">{{ _("December") }}</option>
                 </select>
               </div>
-              <div class="col-md-4 col-xs-8">
+              <div class="col-md-4 col-sm-6 col-xs-10">
                 <input class="form-control bd-element init-queries-field" id="year" name="birthdayYear" aria-label="Birth year" placeholder="YYYY" type="text" maxlength="4" pattern = "(19|20)\d{2}" data-trigger-event="change" data-error="{{_('The birth year is required and must be in valid format')}}" required />
               </div>
             </div>
@@ -265,10 +265,10 @@
             	<label for="biopsyDate">{{_("Biopsy Date")}}:</label>
             	<input id="biopsyDate" type="hidden" data-name="biopsy" class="form-control" value="">
               <div class="row">
-                <div class="col-md-3 col-xs-8">
+                <div class="col-md-3 col-sm-6 col-xs-10">
                   <input class="form-control biopsy-date-element init-queries-field" id="biopsy_day" name="biopsy_day" placeholder="DD" type="text" maxlength="2" pattern="\d[\d]?" data-error="{{_('The biopsy day field is required and must be valid format')}}" required />
                 </div>
-                <div class="col-md-3 col-xs-8">
+                <div class="col-md-4 col-sm-6 col-xs-10">
                   <select data-type="select" class="form-control biopsy-date-element init-queries-field" id="biopsy_month" name="biopsy_month" data-error="{{_('A biopsy month must be selected')}}" required>
                     <option value="">{{ _("Month") }}...</option>
                     <option value="01">{{ _("January") }}</option>
@@ -285,7 +285,7 @@
                     <option value="12">{{ _("December") }}</option>
                   </select>
                 </div>
-                <div class="col-md-3 col-xs-8">
+                <div class="col-md-3 col-sm-6 col-xs-10">
                   <input class="form-control biopsy-date-element init-queries-field" id="biopsy_year" name="biopsy_year" placeholder="YYYY" type="text" maxlength="4" pattern = "(19|20)\d{2}" data-error="{{_('The biopsy year is required and must be in valid format')}}" required />
                 </div>
               </div>
