styling fixes, modal fixes and adding translation tags for new communcation page

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1558,7 +1558,18 @@ div.search {
 .communication-prompt {
   margin-bottom: 1em;
 }
-
+.communication-detail-button {
+  margin-right: 0.5em;
+}
+#commDetailTable {
+  .label-cell {
+    padding: 0.5em 0.5em 0.5em 0
+  }
+  .content {
+    padding: 0.5em;
+    background: #f7f9fb;
+  }
+}
 #profileForm .communications-container .flex-item {
     flex: 0.3 350px;
 }
