--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1583,6 +1583,18 @@ div.pull-right {
 .communication-prompt {
   margin-bottom: 1em;
 }
+.communication-detail-button {
+  margin-right: 0.5em;
+}
+#commDetailTable {
+  .label-cell {
+    padding: 0.5em 0.5em 0.5em 0
+  }
+  .content {
+    padding: 0.5em;
+    background: #f7f9fb;
+  }
+}
 #createUserLink {
   border: 1px solid #bdb9b9;
   height: 3em;
