--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -4,13 +4,17 @@
 <div class="reduce-font-sizes">
 
     <h3 class="tnth-headline">{{ _("Admin Tools") }}</h3>
+    <p>{{_("Click on each for details")}}</p>
     <div id="adminToolLinks">
-      <a href="{{ url_for('portal.communications_dashboard') }}" id="communicationsLink" class="btn btn-default">{{ _("Communications") }}</a>
+      <div>
+        <a href="{{ url_for('portal.communications_dashboard') }}" id="communicationsLink" class="btn btn-default btn-tnth-primary">{{ _("Communications") }}</a>
+      <div/>
       <br/>
-      <a href="{{ url_for('scheduled_job_api.jobs_list') }}" id="scheduledJobsLink" class="btn btn-default">{{ _("Scheduled Jobs") }}</a>
+      <div>
+        <a href="{{ url_for('scheduled_job_api.jobs_list') }}" id="scheduledJobsLink" class="btn btn-default btn-tnth-primary">{{ _("Scheduled Jobs") }}</a>
+      </div>
     </div>
-    <br/>
-
+    <hr/>
     <h3 class="tnth-headline">{{ _("User Administration") }}</h3>
 
     <p id="profileIntro">{{ _("Select any user to view details or make changes.") }}</p>
