--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1569,6 +1569,22 @@ div.search {
     padding: 0.5em;
     background: #f7f9fb;
   }
+  .btn {
+    font-size: 0.9em;
+    display: inline-block;
+    color: #FFF;
+    background-color: #7C959E;
+    border-color: #7C959E;
+    border-radius: 0;
+    letter-spacing: 2px;
+    cursor: pointer;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1.42857143;
+    font-weight: 400;
+    padding: 0.6em;
+    text-decoration: none;
+  }
 }
 #profileForm .communications-container .flex-item {
     flex: 0.3 350px;
