minor text fixes

--- a/portal/templates/communications.html
+++ b/portal/templates/communications.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block main %}
-    <h1>Communications</h1>
+    <h1>{{ _("Communications") }}</h1>
     {% if communications %}
     <div>
         <table id="comms"
