fix typo in button class in staff account creation page

--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -70,7 +70,7 @@
                         });
 
                     });</script>
-                    <div class="back-button-container">
+                    <div class="save-button-container">
                         {{profileSaveBtn()}}
                     </div>
             </div>
